# peakbench

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot-auto-merge.yaml  pr-title.yaml  publish.yaml  release.yaml  rss-proto.yaml
compare-plot/: compare-plot.ipynb  index.html
dims/: dims.ipynb  index.html
docs/: compare-plot.md  dims.md  getting-started.md  index.md  metrics.md  walkthrough.md
docs/stylesheets/: extra.css
getting-started/: getting-started.ipynb  index.html
metrics/: index.html  metrics.ipynb
reference/: index.html  reference.ipynb
scratch/: rss_clear_refs_proto.py
search/: search_index.json
src/benchkit/: __init__.py  bench.py  case.py  cli.py  compare.py  memray.py  plotting.py  snapshot.py  sweep.py
src/peakbench/: __init__.py  bench.py  case.py  cli.py  compare.py  memray.py  plotting.py  snapshot.py  sweep.py
src/pytest_benchmem/: cli.py  compare.py  memray.py  plotting.py  pytest_plugin.py  snapshot.py
sweeps/: index.html
tests/: test_case.py  test_compare.py  test_memray.py  test_plotting.py  test_plugin.py  test_snapshot.py
