[project]
name = "peakbench"
dynamic = ["version"]
description = "A small, generic toolkit for time + peak-memory benchmarking: define cases, get memray measurement, cross-version sweeps, and plotly views."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Felix Bumann" }]
keywords = ["benchmark", "memory", "memray", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
memory = ["memray>=1.11"]
plot = ["numpy", "pandas", "plotly>=5"]
cli = ["typer>=0.12"]
all = ["peakbench[memory,plot,cli]"]

[project.scripts]
peakbench = "peakbench.cli:app"

[project.urls]
Homepage = "https://github.com/fluxopt/peakbench"
Documentation = "https://fluxopt.github.io/peakbench/"
Repository = "https://github.com/fluxopt/peakbench"
Issues = "https://github.com/fluxopt/peakbench/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = ["ruff", "mypy", "pytest", "peakbench[all]", { include-group = "docs" }]
docs = [
    "jupytext",
    "ipykernel",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]
ignore = ["D105", "D107", "D203", "D205", "D213", "D401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = ["src/peakbench"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "plotly", "plotly.*", "memray", "memray.*"]
ignore_missing_imports = true
